syntax = "proto3";

import "google/protobuf/empty.proto";
import "protos/messages/common.proto";
import "protos/messages/maintgrpc_getdict.proto";

option csharp_namespace = "Adnc.Shared.Rpc.Grpc.Services";

package services;

service  MaintGrpc {
  rpc GetDict(messages.DictRequest) returns (messages.GrpcResponse);
}
