syntax = "proto3";

import "google/protobuf/empty.proto";
import "protos/messages/common.proto";
import "protos/messages/whsegrpc_getproducts.proto";

option csharp_namespace = "Adnc.Shared.Rpc.Grpc.Services";

package services;

service  WhseGrpc {
  rpc GetProducts(messages.ProductSearchRequest) returns (messages.GrpcResponse);
}
